2022-04-08T16:12:29Z:
* notice: last 14d: all unq: 2288 24
* notice: prev accum: outdated-all outdated-unq / all unq: 11627 307 / 13922 392
* notice: next accum: outdated-all outdated-unq / all unq: 11627 307 / 13915 388
* notice: prev json diff // prev day diff: unq all: +0 +53 / -4 -60 // +2 +156 / -13 -181

2022-04-08T08:08:52Z:
* notice: last 14d: all unq: 2295 27
* notice: prev accum: outdated-all outdated-unq / all unq: 11627 307 / 13975 399
* notice: next accum: outdated-all outdated-unq / all unq: 11627 307 / 13922 392
* notice: prev json diff // prev day diff: unq all: +2 +49 / -9 -102 // +2 +103 / -9 -121

2022-04-08T00:34:37Z:
* notice: last 14d: all unq: 2348 33
* notice: prev accum: outdated-all outdated-unq / all unq: 11454 299 / 13805 399
* notice: next accum: outdated-all outdated-unq / all unq: 11627 307 / 13975 399
* notice: prev json diff // prev day diff: unq all: +0 +54 / -0 -19 // +0 +54 / -0 -19

2022-04-07T16:08:47Z:
* notice: last 14d: all unq: 2351 35
* notice: prev accum: outdated-all outdated-unq / all unq: 11454 299 / 13805 399
* notice: next accum: outdated-all outdated-unq / all unq: 11454 299 / 13805 399
* notice: prev json diff // prev day diff: unq all: +0 +52 / -0 -52 // +2 +156 / -0 -135

2022-04-07T08:09:15Z:
* notice: last 14d: all unq: 2351 35
* notice: prev accum: outdated-all outdated-unq / all unq: 11454 299 / 13821 397
* notice: next accum: outdated-all outdated-unq / all unq: 11454 299 / 13805 399
* notice: prev json diff // prev day diff: unq all: +2 +50 / -0 -66 // +2 +104 / -0 -83

2022-04-07T00:34:50Z:
* notice: last 14d: all unq: 2367 35
* notice: prev accum: outdated-all outdated-unq / all unq: 11265 281 / 13637 396
* notice: next accum: outdated-all outdated-unq / all unq: 11454 299 / 13821 397
* notice: prev json diff // prev day diff: unq all: +0 +54 / -0 -17 // +0 +54 / -0 -17

2022-04-06T16:08:53Z:
* notice: last 14d: all unq: 2372 41