@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-04-08T16:12:29Z",
-  "count_outdated" : 11627,
-  "uniques_outdated" : 307,
-  "count" : 13915,
-  "uniques" : 388,
+  "timestamp" : "2022-04-09T00:31:45Z",
+  "count_outdated" : 11843,
+  "uniques_outdated" : 328,
+  "count" : 14131,
+  "uniques" : 401,
   "clones" : [
     {
-      "timestamp": "2022-03-25T00:00:00Z",
-      "count": 35,
-      "count_minmax": [ 35, 216 ],
-      "uniques": 8,
-      "uniques_minmax": [ 8, 21 ]
-    },
-    {
       "timestamp": "2022-03-26T00:00:00Z",
-      "count": 162,
+      "count": 143,
       "count_minmax": [ 0, 162 ],
       "uniques": 8,
       "uniques_minmax": [ 0, 8 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-04-08T00:00:00Z",
-      "count": 100,
-      "count_minmax": [ 0, 100 ],
+      "count": 154,
+      "count_minmax": [ 0, 154 ],
       "uniques": 2,
       "uniques_minmax": [ 0, 2 ]
     }
