@@ -1,15 +1,10 @@
 {
   "count": 2288,
-  "uniques": 24,
+  "uniques": 21,
   "clones": [
     {
-      "timestamp": "2022-03-25T00:00:00Z",
-      "count": 35,
-      "uniques": 8
-    },
-    {
       "timestamp": "2022-03-26T00:00:00Z",
-      "count": 162,
+      "count": 143,
       "uniques": 8
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-04-08T00:00:00Z",
-      "count": 100,
+      "count": 154,
       "uniques": 2
     }
   ]
